--- a/style.scss
+++ b/style.scss
@@ -34,6 +34,7 @@ html {
 		flex: 0;
 		padding: $input-padding;
 		border-radius: $border-radius;
+		border: 0;
 		background-color: #2980b9;
 		color: white;
 	}
